--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -1,5 +1,53 @@
-<section class='section'>
-  <div class='container'>
-    <p>leave</p>
+<section class="section">
+  <div class="container">
+    <h2>
+      Leave an &nbsp;
+      <span> application </span>
+    </h2>
+    <p>
+      Please use the form below to contact us. Enter your name, email, and
+      message and we'll get back to you shortly.
+    </p>
+    <div class="leave-content-group">
+      <div class="leave-section-adv-box">
+        <img src="" alt="Young student" class="leave-section-img" />
+        <p>1000</p>
+        <p>
+          of our online English language lessons! This journey has been full of
+          discovery, growth and unforgettable moments, and we are happy to share
+          this joyful event with you.
+        </p>
+      </div>
+      <form method="post">
+        <input type="text" placeholder="Name" />
+        <input type="email" placeholder="Email" />
+        <input type="tel" placeholder="Phone" />
+        <textarea name="comment" id="comment" placeholder="Comment"></textarea>
+        <fieldset>
+          <legend>Choose a teacher</legend>
+          <label>
+            <input type="radio" name="teacher" value="maria" checked />
+            Maria
+          </label>
+          <label>
+            <input type="radio" name="teacher" value="artem" />
+            Artem
+          </label>
+          <label>
+            <input type="radio" name="teacher" value="ilona" />
+            Ilona
+          </label>
+          <label>
+            <input type="radio" name="teacher" value="volodymyr" />
+            Volodymyr
+          </label>
+        </fieldset>
+        <button class="leave-section-btn" type="submit">Send</button>
+        <p class="leave-section-btn-descr">
+          By clicking on “Send” button, you agree to our Privacy Policy, and
+          allow Promodo to use this information for marketing purposes.
+        </p>
+      </form>
+    </div>
   </div>
 </section>
