--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,5 +1,44 @@
-<section class='section'>
-  <div class='container'>
-    <p>proposal</p>
+<section class="our-english-pack">
+  <div class="container wrapper-our-english-pack">
+    <h2 class="header-sec">Master the <span class="accent">Language</span> with Our English Package!</h2>
+    <div class="first-extrabg-wrapper">
+      <h3 class="header-th">Power of English</h3>
+      <ul class="list-eng-pack">
+        <li class="point-eng-pack">
+          <div class="engpack-icon-wrapper">
+            <svg class="icon-eng-pack">
+              <use href="/icons.svg#icon-agree"></use>
+            </svg>
+          </div>
+          <p class="paragraph-eng-pack">Dive into captivating lessons designed to stimulate your curiosity.</p>
+        </li>
+        <li class="point-eng-pack second-point">
+          <div class="engpack-icon-wrapper">
+            <svg class="icon-eng-pack">
+              <use href="/icons.svg#icon-agree"></use>
+            </svg>
+          </div>
+          <p class="paragraph-eng-pack">Learn in a nurturing setting where every student's progress matters.</p>
+        </li>
+        <li class="point-eng-pack third-point">
+          <div class="engpack-icon-wrapper">
+            <svg class="icon-eng-pack">
+              <use href="/icons.svg#icon-agree"></use>
+            </svg>
+          </div>
+          <p class="paragraph-eng-pack">Experience the satisfaction of real progress as your 
+            language skills and confidence grow with every session.</p>
+        </li>
+      </ul>
+      <img 
+      class="first-extrabg-image"
+      srcset="/proposal/tall-stack-of-books.webp 1x,
+      /proposal/tall-stack-of-books@2x.webp 2x"
+      src="/proposal/tall-stack-of-books.webp"
+      alt="tall-stack-of-books" >
+      <button type="button" class="cta" >Leave an application</button>
+    </div>
+    <div class="second-extrabg"></div>
+    <div class="third-extrabg"></div> 
   </div>
-</section>
+</section> 
