feat: add test theme switch

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,7 @@
 @import url('components/reviews.css');
 @import url('components/team.css');
 @import url('components/modal.css');
+@import url('components/switch-theme.css');
 
 /* Layouts */
 @import url('layout/header.css');
@@ -24,14 +25,13 @@
 @import url('utils/container.css');
 @import url('utils/title.css');
 
-
 :root {
   font-family: 'Manrope', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-  color: #242424;
+  color: var(--primary-text-color);
   background-color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
@@ -39,4 +39,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar {
+  width: 0;       
+}
+
+body{
+   background-color: var(--main-bg-color);;
 }
