--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -3,6 +3,7 @@
     position: sticky;
     top: 0;
     background-color: rgba(255, 255, 255, 0.788);
+    z-index: 99;
 }
 .header__wrapper{
     display: flex;
