--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -39,18 +39,15 @@
   --section-about-padding-top-mobile: 80px;
   --section-about-padding-top-tablet: 100px;
   --section-about-padding-top-desktop: 96px;
-
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+
+body.dark{
+  --primary-text-color: #f5f5f5;
+  --secondary-text-color: rgba(255, 255, 255, 0.5);
+  --light-text-color: rgba(255, 255, 255, 0.7);
+  --box-bg-color: #3e3e3e;
+  --input-border-color: rgba(200, 200, 200, 0.1);
+  --button-border-color: rgba(45, 45, 45, 0.4);
+  --main-bg-color: #262c27;
 }
