--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -68,6 +68,16 @@
           </a>
         </li>
       </ul>
+      <div class="toggle-switch">
+        <p>Light</p>
+        <span>
+          <label class="switch">
+            <input class="theme-switch" type="checkbox" />
+            <span class="slider round"></span>
+          </label>
+        </span>
+        <p>Dark</p>
+      </div>
     </div>
     <!-- start mobile/tablet elements -->
     <div class="header__btn" data-modal-open type="button">open</div>
