--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -1,95 +1,95 @@
-.header{
-    padding: 20px 0px;
-    position: sticky;
-    top: 0;
-    background-color: rgba(255, 255, 255, 0.788);
-    z-index: 99;
+.header {
+  padding: 20px 0px;
+  position: sticky;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.788);
+  z-index: 99;
 }
-.header__wrapper{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .logo {
-    color: var(--primary-text-color);
-        font-family: Manrope;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
+  color: var(--primary-text-color);
+  font-family: Manrope;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 .logo--accent {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
-.header__nav__list{
-    display: flex;
-    align-items: center;
-    gap: 20px;
+.header__nav__list {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 @media screen and (max-width: 1279px) {
-.header__nav__list{
+  .header__nav__list {
     display: none;
+  }
 }
+.nav__link {
+  color: var(--primary-text-color);
+  position: relative;
+  font-family: Manrope, sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.3;
+  padding: 8px 0px;
 }
-.nav__link{
-    color: var(--primary-text-color);
-    position: relative;
-        font-family: Manrope ,sans-serif;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 1.3;  
-        padding: 8px 0px;
-}
-.nav__link:hover::after, .nav__link:focus::after{
-    content: " ";
-    position: absolute;
-    bottom: 0;
-    display: block;
-    width: 62%;
-    height: 2px;
-    background-color: var(--accent-color);
-    /* border-bottom: 2px solid var(--accent-color); */
+.nav__link:hover::after,
+.nav__link:focus::after {
+  content: ' ';
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 62%;
+  height: 2px;
+  background-color: var(--accent-color);
+  /* border-bottom: 2px solid var(--accent-color); */
 }
 
-
-
-.header__social__list{
-    display: flex;
-    align-items: center;
-    gap: 12px;
+.header__social__list {
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 @media screen and (max-width: 1279px) {
-    .header__social__list {
-        display: none;
-    }
+  .header__social__list {
+    display: none;
+  }
 }
 
-.social__link{
-    padding: 8px;
-    display: flex;
-    justify-content: center;
-border-radius: 10px;
-    
-    border: 1px solid var(--secondary-text-color);
-    transition: border var(--transition-effect), var(--transition-time);
+.social__link {
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+
+  border: 1px solid var(--secondary-text-color);
+  transition: border var(--transition-effect), var(--transition-time);
 }
-.social__link:hover,.social__link:focus{
-    border: 1px solid var(--light-accent-color);
+.social__link:hover,
+.social__link:focus {
+  border: 1px solid var(--light-accent-color);
 }
 .social__link:hover .social__icon,
-.social__link:focus .social__icon{
-    fill: var(--accent-color);
-} 
-.social__icon{
-width: 28px;
-height: 28px;
-fill: var(--primary-text-color);
-    transition: fill var(--transition-effect), var(--transition-time);
+.social__link:focus .social__icon {
+  fill: var(--accent-color);
+}
+.social__icon {
+  width: 28px;
+  height: 28px;
+  fill: var(--primary-text-color);
+  transition: fill var(--transition-effect), var(--transition-time);
 }
 /* mobile styles */
 @media screen and (min-width: 1280px) {
-.header__btn {
+  .header__btn {
     display: none;
-}
+  }
 }
