--- a/src/css/components/lessons.css
+++ b/src/css/components/lessons.css
@@ -6,8 +6,8 @@
 
 @media(max-width:900px) {
   .section-lessons {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 }
 
@@ -17,7 +17,7 @@
 }
 
 .lesson-title {
-  color: #121417;
+  color: var(--primary-text-color);
   text-align: center;
   font-family: 'Manrope', sans-serif;
   font-size: 40px;
@@ -135,7 +135,7 @@
 }
 
 .lesson-span {
-  color: #121417;
+  color: var(--primary-text-color);
   text-align: center;
   font-family: 'Manrope', sans-serif;
   font-size: 32px;
