--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,4 +1,4 @@
-<section class="section-lesson" id="lesson">
+<section class="section-lessons" id="lessons">
   <div class="lesson-container">
     <h2 class="lesson-title">
       Our <span class="lesson-title-span">lessons</span>
