--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -8,6 +8,7 @@
       Please use the form below to contact us. Enter your name, email, and
       message and we'll get back to you shortly.
     </p>
+
     <div class="leave-content-group">
       <div class="leave-section-adv-box">
         <img src="" alt="Young student" class="leave-section-img" />
@@ -18,7 +19,8 @@
           this joyful event with you.
         </p>
       </div>
-      <form method="post">
+
+      <form class="leave-section-form" method="post">
         <input class="leave-section-input" type="text" placeholder="Name" />
         <input class="leave-section-input" type="email" placeholder="Email" />
         <input class="leave-section-input" type="tel" placeholder="Phone" />
@@ -28,9 +30,11 @@
           id="comment"
           placeholder="Comment"
         ></textarea>
-        <fieldset class="leave-content-rb-fieldset">
+        <fieldset class="leave-section-rb-fieldset">
           <legend class="leave-section-rb-title">Choose a teacher</legend>
-          <!-- <div class="leave-content-rb-group">
+
+          <div class="leave-section-rd-box">
+            <!-- <div class="leave-content-rb-group">
             <div class="leave-section-rb-wrap">
               <input
                 class="leave-section-rb-input visually-hidden"
@@ -69,7 +73,9 @@
             </label>
           </div>
         </fieldset>
+
         <button class="leave-section-btn" type="submit">Send</button>
+
         <p class="leave-section-btn-descr">
           By clicking on “Send” button, you agree to our Privacy Policy, and
           allow Promodo to use this information for marketing purposes.
