--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -1,7 +1,7 @@
 <section class="section">
   <div class="container">
     <h2 class="section_title">
-      Leave an &nbsp;
+      Leave an
       <span class="section_title_span"> application </span>
     </h2>
     <p class="leave-section-title-descr">
