add footer id +team

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,178 +1,4 @@
-   <style>
-.link {
-    text-decoration: none;
-}
-
-
-@font-face {
-    font-family: 'Manrope';
-    src: url('fonts/Manrope-Regular.woff2') format('woff2'),
-        url('fonts/Manrope-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-body {
-    font-family: 'Manrope', sans-serif;
-}
-
-.footer {
-    background-color: #121417;
-}
-
-/* The main container for the footer */
-.footer-container {
-    display: flex;
-    justify-content: space-between;
-
-    color: #FFFFFF;
-    padding-top: 64px;
-    padding-bottom: 64px;
-    border-bottom: 1px rgba(255, 255, 255, 0.10);
-
-}
-
-.logotype {
-    color: #FFF;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-
-.logotype-right-accent {
-    color: #4DC274;
-}
-
-.footer-contact-list-item {
-    display: flex;
-    flex-direction: column;
-    color: var(--activity-bar-inactive-foreground, rgba(255, 255, 255, 0.60));
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.28571;
-    letter-spacing: -0.02em;
-}
-
-.label,
-.value {
-    display: block;
-}
-
-.footer-contact-list-item a {
-    color: #FFF;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1.29;
-    text-decoration: none;
-}
-
-
-.social-media-link {
-    padding: 8px;
-    /* border: ; */
-}
-
-
-/* The first column containing the logo and contact info */
-/* .footer-logo-tel-address { */
-/* flex: 1; */
-/* } */
-
-/* The second column containing menu items */
-/* .footer-menu { */
-/* flex: 1; */
-/* } */
-
-.footer-menu-list {
-    list-style: none;
-    padding-left: 0;
-
-}
-
-/* The third column containing social media icons */
-.footer-social-media {
-    /* flex: 1; */
-    display: flex;
-    justify-content: space-between;
-
-    align-items: center;
-    gap: 8px;
-
-}
-
-.social-media-contacts-list {
-    list-style: none;
-    /* padding-left: 0; */
-    display: flex;
-
-}
-
-.social-contact-icon {
-    opacity: 0.8;
-    border-radius: 10px;
-    border: 1px solid var(--menubar-selection-background, rgba(255, 255, 255,
-0.10));
-}
-
-
-
-
-
-
-/* For the footer line and copyright and terms */
-.copyright-privacy-terms {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid #ccc;
-    padding-top: 10px;
-}
-
-.footer-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.footer-logo-tel-address,
-.footer-menu,
-.footer-social-media {
-    flex: 1;
-    flex-basis: calc(33.333% - 10px);
-    flex-shrink: 0;
-}
-
-.footer-contact-list,
-.footer-menu-list,
-.social-media-contacts-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.social-media-contacts-list {
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-}
-
-.copyright-privacy-terms {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.footer-left,
-.footer-right {
-    flex: 1;
-    text-align: left;
-    text-align: right;
-
-}
-   </style>
-<footer class="footer" role="contentinfo">
+<footer  id="footer" role="contentinfo">
   <div class="footer-container container">
     <div class="footer-logo-tel-address">
       <a class="logotype link" href="./index.html">
@@ -206,9 +32,10 @@ body {
       <ul class="footer-menu-list list">
         <li class="footer-menu-list-item"><a class="link" href="#about-us">About us</a></li>
         <li class="footer-menu-list-item"><a class="link" href="#our-lessons">Our lessons</a></li>
-        <li class="footer-menu-list-item"><a class="link" href="#teachers.">Teachers</a></li>
+        <li class="footer-menu-list-item"><a class="link" href="#teachers">Teachers</a></li>
         <li class="footer-menu-list-item"><a class="link" href="#reviews">Reviews</a></li>
         <li class="footer-menu-list-item"><a class="link" href="#contact-us">Contact us</a></li>
+         <li class="footer-menu-list-item"><a class="link" href="#team">Our team</a></li>
       </ul>
     </div>
 
