--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section reviewsSection">
+<section class="section reviews-section">
   <div class="container">
     <p>reviews</p>
   </div>
