--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -1,13 +1,15 @@
 <section id="teachers" class="teachers section">
   <div class="container">
     <h2 class="visually-hidden">Teachers</h2>
-    <p>Meet our <span>teachers</span></p>
-    <p>
+    <p class="section_title">
+      Meet our <span class="section_title_span">teachers</span>
+    </p>
+    <p class="section_subtitle">
       Discover our team of dedicated educators, committed to guiding you on your
       journey to English proficiency with personalized and engaging instruction
     </p>
-    <ul class="teachers-list">
-      <li class="teacher-card">
+    <ul class="teachers-list list">
+      <li class="teacher-list__item">
         <div class="avatar">
           <img
             srcset="/assets/img/teachers/Maria@2x.png 2x"
@@ -21,7 +23,7 @@
           instruction, Maria brings warmth and patience to every class
         </p>
       </li>
-      <li class="teacher-card">
+      <li class="teacher-list__item">
         <div class="avatar">
           <img
             srcset="/assets/img/teachers/Artem@2x.png 2x"
@@ -35,7 +37,7 @@
           learning, Artem excels in keeping students engaged and motivated
         </p>
       </li>
-      <li class="teacher-card">
+      <li class="teacher-list__item">
         <div class="avatar">
           <img
             srcset="/assets/img/teachers/Ilona@2x.png 2x"
@@ -50,7 +52,7 @@
           tasks
         </p>
       </li>
-      <li class="teacher-card">
+      <li class="teacher-list__item">
         <div class="avatar">
           <img
             srcset="/assets/img/teachers/Volodymyr@2x.png 2x"
